# cvx-finance-examples

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  copyright.txt  pyproject.toml
.github/workflows/: basic.yml
data/: asset_class_returns.csv  daily-treasury-rates.csv
examples/: MPC-optimal-execution.py  alternative-investment-planning.py  blending-forecasts.py  bond-pricing.py  currency-exchange.py  markowitz-portfolio-construction.py  optimal-execution.py  option-price-bounds.py  sample-based-approx.py  sparse-inverse-covariance.py  worst-case-risk.py
